# film-goblin

./: .gitignore  .nvmrc  CLAUDE.md  algo.md  goblin_tagged.md  index.html  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml
app/: .env.local.example  .gitignore  CLAUDE.md  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts
app/app/: globals.css  layout.tsx  manifest.ts  page.tsx
app/components/: ActivityCommentThread.tsx  AddFilmModal.tsx  AnnouncementOverlay.tsx  Avatar.tsx  AvatarEditor.tsx  BackButton.tsx  BottomNav.tsx  BottomNavClient.tsx  BottomNavIcons.tsx  BottomSheet.tsx  BuyOnAppleLink.tsx  BuyOnAppleTvPill.tsx  CLAUDE.md  CommentButton.tsx  CommentComposer.tsx  CommentList.tsx  (+80 more)
db/: .env.example  CLAUDE.md  README.md  package-lock.json  package.json  vitest.config.ts
docs/: 2026-04-26-session-summary.txt  2026-04-27-session-summary.txt  2026-04-29-session-summary.txt  2026-04-30-session-summary.txt  2026-05-01-session-summary.txt  2026-05-02-session-summary.txt  backlog.md  film-wishlist.md  gazing-two-account-mobile-walkthrough.md  roadmap.md  sub-project-history.md
fg-trailers/: Cargo.toml  README.md
fg-trailers/sql/: add_trailer_fields.sql
fg-trailers/src/: app.rs  events.rs  main.rs  supabase.rs  ui.rs  youtube.rs
notifier/: CLAUDE.md  package.json  tsconfig.json  vitest.config.ts
src/: App.jsx  data.js
supabase/: config.toml
tasks/: README.md
worker/: .env.example  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json
(+1037 files in other folders)
