[package]
name = "fg-trailers"
version = "0.1.0"
edition = "2021"
description = "FilmGoblin Trailer Forge — internal Rust TUI for curating YouTube trailer links."
publish = false

[[bin]]
name = "fg-trailers"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
webbrowser = "1"
tui-input = "0.11"

[profile.release]
lto = true
strip = true
